# gpapi

./: .gitignore  README.md  index.html  package.json  vite.config.js
src/: App.vue  main.js
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: api.rs  fs.rs  http.rs  lib.rs  main.rs
src/assets/: main.css
src/components/: ApiAside.vue  ApiAsideTree.vue  ApiMain.vue  ApiMainDetail.vue
src/store/: tab.js
